# bsg-bats-fr

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
bsg_bats_fr/: __init__.py  cli.py  download.py  infer.py  sinp.py  taxref.py
tests/: test_smoke.py
